Fix overflow x

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -219,7 +219,10 @@ header
     padding-left: 50px
     padding-right: 50px
 
+
     &.custom
+        width: 100vw
+        overflow-x: hidden
         padding-left: 0
         padding-right: 0
 
